--- a/systemd-injection-pod.yaml
+++ b/systemd-injection-pod.yaml
@@ -5,7 +5,7 @@ metadata:
   # annotations:
     # I believe that ExecStart with an arbitrary command works here too,
     # but I haven't figured out how to marshalize the ExecStart struct to gvariant string.
-    # org.systemd.property.SuccessAction: "'poweroff-force'"
+    org.systemd.property.SuccessAction: "'poweroff-force'"
 spec:
   containers:
     - name: hello
